Endret fra opplysningstype til navn for opplysning i APIet. Fjernet vedtakskjemaer for nå.
