# mediator/src/main/kotlin/no/nav/dagpenger/behandling/mediator/api/BehandlingApi.kt
@@ -121,7 +121,7 @@ private fun Behandling.tilBehandlingDTO(): BehandlingDTO {
 private fun Opplysning<*>.tilOpplysningDTO(): OpplysningDTO {
     return OpplysningDTO(
         id = this.id,
-        opplysningstype = this.opplysningstype.navn,
+        navn = this.opplysningstype.navn,
         verdi = this.verdi.toString(),
         status =
             when (this) {
